tests/ui/missing_colon.stderr
error: expected `:` to form a path like `::std::hash::Hash`
 --> tests/ui/missing_colon.rs:3:15
  |
3 |         Eq = :core::cmp::Eq, ::core:cmp::PartialEq
  |               ^^^^

error: expected `::` to form a path like `::std::hash::Hash`
 --> tests/ui/missing_colon.rs:3:37
  |
3 |         Eq = :core::cmp::Eq, ::core:cmp::PartialEq
  |                                     ^^^

error[E0432]: unresolved import `crate`
 --> tests/ui/missing_colon.rs:2:5
  |
2 | /     derive_aliases::define! {
3 | |         Eq = :core::cmp::Eq, ::core:cmp::PartialEq
4 | |         //   ^ missing `:`          ^ missing `:`
5 | |         AndMore = ::std::hash::Hash, ..Ord, ::core::clone::Clone, ::core::marker::Copy, ::core::default::Default;
6 | |     }
  | |_____^ no `Eq` in `derive_alias`
  |
  = note: this error originates in the macro `derive_aliases::define` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this trait instead
  |
2 -     derive_aliases::define! {
3 -         Eq = :core::cmp::Eq, ::core:cmp::PartialEq
4 -         //   ^ missing `:`          ^ missing `:`
5 -         AndMore = ::std::hash::Hash, ..Ord, ::core::clone::Clone, ::core::marker::Copy, ::core::default::Default;
6 -     }
2 +     std::cmp::Eq as _
  |

error[E0433]: failed to resolve: could not find `Ord` in `derive_alias`
 --> tests/ui/missing_colon.rs:5:40
  |
5 |         AndMore = ::std::hash::Hash, ..Ord, ::core::clone::Clone, ::core::marker::Copy, ::core::default::Default;
  |                                        ^^^ could not find `Ord` in `derive_alias`
